--- a/portafolio.css
+++ b/portafolio.css
@@ -40,7 +40,7 @@ p {
   margin: 0;
 }
 
-.nav-bar {
+.nav-bar, .projects-bar {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -54,7 +54,13 @@ p {
   padding: 15px;
 }
 
-.nav-bar span {
+.projects-bar {
+  justify-content: center;
+  background-color: transparent;
+}
+
+.nav-bar span,
+.projects-bar span {
   font-family: 'Open Sans Condensed', sans-serif;
   display: inline-block;
   margin-right: 45px;
@@ -63,7 +69,8 @@ p {
   text-shadow: 2px 2px 4px #000;
 }
 
-.nav-bar span:hover {
+.nav-bar span:hover,
+.projects-bar span:hover {
   color: #999;
 }
 
@@ -75,12 +82,44 @@ p {
   background-position: center;
 }
 
+#group3 .parallax__layer--base {
+  background-image: url('./images/works1.JPG');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: flex-end;
+}
+
+#group3 .parallax__layer--base:after {
+  content: '\A';
+  position: absolute;
+  width: 100%; height:100%;
+  top:0; left:0;
+  background:rgba(0,0,0,0.6);
+  opacity: 0;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
+
+#group3 .parallax__layer--base:hover {
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+}
+
+#group3 .parallax__layer--base:hover:after {
+  opacity: 1;
+}
+
 #group1 {
   z-index: 0;
 }
 
 #group2 {
   z-index: 2;
+}
+
+#group3 {
+  z-index: 3;
 }
 
 #group2 .parallax__layer {
@@ -103,7 +142,6 @@ p {
   color: black;
   font-size: 55px;
   font-weight: bold;
-  margin-bottom: 20px;
 }
 
 .home--text_container .description {
@@ -124,26 +162,33 @@ p {
 
 .about--container {
   display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
   height: 100%;
 }
 
 .about--text_container {
   font-family: 'Open Sans Condensed', sans-serif;
+  box-sizing: border-box;
   width: 60%;
+  min-width: 400px;
   padding: 2% 7%;
 }
 
 .about--img_container {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-flow: column nowrap;
   width: 40%;
   max-height: 100%;
 }
 
 .about--img_container img {
-  margin: 10px;
-  height: 54%;
-  width: auto;
+  margin: 5px;
+  width: 90%;
+  min-width: 400px;
+  height: auto;
 }
 
 .about--text_container .title-line {
@@ -151,6 +196,10 @@ p {
   height: 20px;
   border-bottom: 1px solid black;
   margin-bottom: 60px;
+}
+
+img:first-child {
+  margin-top: 20px;
 }
 
 .about--text_container .title {
