--- a/portafolio.css
+++ b/portafolio.css
@@ -31,13 +31,83 @@
   transform: translateZ(-1px) scale(2);
 }
 
+/*Groups*/
+
+#group1 {
+  z-index: 0;
+}
+
+#group2, #group3, #group4 {
+  z-index: 2;
+}
+
+#group2 .parallax__layer {
+  background-color: #fff;
+}
+
+#group3 {
+  height: 95vh;
+}
+#group4 {
+  height: 20vh;
+}
+
+#group1 .parallax__layer--back {
+  background-image: url('./images/foto-home.JPG');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+#group3 .parallax__layer--base {
+  background-image: url('./images/works.JPG');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  /*align-items: flex-end;*/
+}
+
+#group3 .overlay {
+  content: '\A';
+  position: absolute;
+  width: 100%; height:100%;
+  top:0; left:0;
+  background:rgba(0,0,0,0.6);
+  opacity: 0;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
+
+#group3 .overlay:hover {
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+}
+
+#group3 .overlay:hover {
+  opacity: 1;
+}
+
+#group4 .parallax__layer {
+  background-color: #222;
+}
+
 /*HTML*/
+
 body {
   margin: 0;
 }
 
 p {
   margin: 0;
+}
+
+.hide {
+  display: none;
+}
+
+.margin-0-auto {
+  margin: 0 auto;
 }
 
 .nav-bar, .projects-bar {
@@ -55,8 +125,11 @@ p {
 }
 
 .projects-bar {
+  position: relative;
+  top: 92%;
   justify-content: center;
   background-color: transparent;
+  align-self: flex-end;
 }
 
 .nav-bar span,
@@ -74,60 +147,8 @@ p {
   color: #999;
 }
 
-#group1 .parallax__layer--back {
-  background-image: url('./images/foto-home.JPG');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-}
-
-#group3 .parallax__layer--base {
-  background-image: url('./images/works1.JPG');
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: flex-end;
-}
-
-#group3 .parallax__layer--base:after {
-  content: '\A';
-  position: absolute;
-  width: 100%; height:100%;
-  top:0; left:0;
-  background:rgba(0,0,0,0.6);
-  opacity: 0;
-  transition: all 1s;
-  -webkit-transition: all 1s;
-}
-
-#group3 .parallax__layer--base:hover {
-  -webkit-filter: grayscale(1);
-  filter: grayscale(1);
-}
-
-#group3 .parallax__layer--base:hover:after {
-  opacity: 1;
-}
-
-#group1 {
-  z-index: 0;
-}
-
-#group2 {
-  z-index: 2;
-}
-
-#group3 {
-  z-index: 3;
-}
-
-#group2 .parallax__layer {
-  background-color: #fff;
-}
-
-#group4 {
-  height: 20vh;
+.active {
+  color: #999;
 }
 
 .home--text_container {
@@ -175,6 +196,32 @@ p {
   padding: 2% 7%;
 }
 
+.about--text_container .title,
+.modal .title,
+.work-title {
+  font-size: 45px;
+}
+
+.about--text_container .title:after,
+.modal .title:after {
+  display: inline-block;
+  content: "";
+  border-top: 2px solid black;
+  width: 60%;
+  margin: 0 5px;
+  transform: translateY(-16px);
+}
+
+.modal .title:after {
+  border-top-color: white;
+}
+
+.about--text_container .description {
+  padding: 20px;
+  font-size: 30px;
+  text-align: justify;
+}
+
 .about--img_container {
   display: flex;
   align-items: center;
@@ -191,24 +238,82 @@ p {
   height: auto;
 }
 
-.about--text_container .title-line {
-  width: 100%;
-  height: 20px;
-  border-bottom: 1px solid black;
-  margin-bottom: 60px;
-}
-
 img:first-child {
   margin-top: 20px;
 }
 
-.about--text_container .title {
-  font-size: 45px;
-  background-color: white;
+.work-title {
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: white;
+  position: absolute;
+  top:0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.about--text_container .description {
-  padding: 20px;
-  font-size: 30px;
-  text-align: justify;
+.modal {
+  font-family: 'Open Sans Condensed', sans-serif;
+  position: relative;
+  bottom:35px;
+  width: 90%;
+  height: 90%;
+  background-color: transparent;
+  z-index: 4;
+  box-sizing: border-box;
+  padding: 3% 7%;
+  color: white;
+}
+
+div.project-container {
+  width: 70%;
+  margin-left: 15%;
+}
+
+div.project-img {
+  width: 85%;
+  min-width: 300px;
+  -webkit-filter: none;
+  filter: none;
+}
+
+img.fit-img {
+  width: 100%;
+  -webkit-filter: none;
+  filter: none;
+}
+
+.contact-links {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.contact-links i {
+  font-size: 40px;
+  color: white;
+  margin-right: 8px;
+}
+
+.contact-links a,
+address {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-style: normal;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  text-decoration: none;
+  transition: color .25s ease-in;
+}
+
+.contact-links i {
+  color: white;
+  transition: all .25s ease-in-out;
+}
+
+.contact-links a:hover {
+  color: #999;
+  transform: scale(1.1);
 }
