--- a/portafolio.css
+++ b/portafolio.css
@@ -1,40 +1,40 @@
-
 /*Parallax*/
 
 @supports ((perspective: 1px) and (not (-webkit-overflow-scrolling: touch))) {
   /* ... parallax styles ... */
+  .parallax {
+    scroll-behavior: smooth;
+    perspective: 1px;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
 
-.parallax {
-  scroll-behavior: smooth;
-  perspective: 1px;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
+  .parallax__group {
+    position: relative;
+    height: 500px; /* fallback for older browsers */
+    height: 100vh;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+  }
 
-.parallax__group {
-  position: relative;
-  height: 500px; /* fallback for older browsers */
-  height: 100vh;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-}
+  .parallax__layer {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 
-.parallax__layer {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
+  .parallax__layer--base {
+    transform: translateZ(0);
+    box-sizing: border-box;
+    padding-top: 20px;
+  }
 
-.parallax__layer--base {
-  transform: translateZ(0);
-}
-
-.parallax__layer--back {
-  transform: translateZ(-1px) scale(2);
-}
+  .parallax__layer--back {
+    transform: translateZ(-1px) scale(2);
+  }
 
 }
 
@@ -50,26 +50,6 @@
 
 #group2 .parallax__layer {
   background-color: #fff;
-}
-
-#group4 {
-  height: 20vh;
-}
-
-#group1 .parallax__layer--back {
-  background-image: url('./images/foto-home.JPG');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-}
-
-#group3 .parallax__layer--base {
-  background-image: url('./images/works.JPG');
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  /*align-items: flex-end;*/
 }
 
 #group3 .overlay {
@@ -97,6 +77,21 @@
 }
 
 /*HTML*/
+.nav-bar a,
+.projects-bar span,
+.home--text_container .description,
+.home--text_container .career,
+.about--text_container,
+.work-msg,
+.modal,
+.contact-links a,
+address{
+  font-family: 'Open Sans Condensed', sans-serif;
+}
+
+.home--text_container .title {
+  font-family: 'Fira Mono', monospace;
+}
 
 body {
   margin: 0;
@@ -114,199 +109,11 @@ p {
   margin: 0 auto;
 }
 
-.nav-bar, .projects-bar {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  position: fixed;
-  height: 3vh;
-  width: 100%;
-  /*background-color: #222;*/
-  background-color: transparent;
-  z-index: 1;
-  color: #ddd;
-  font-size: 2em;
-  padding: 15px;
-  transition: background-color .27s ease-in-out;
-}
-
-.projects-bar {
-  position: relative;
-  top: 92%;
-  justify-content: center;
-  background-color: transparent;
-  align-self: flex-end;
-}
-
-.nav-bar a,
-.projects-bar span {
-  font-family: 'Open Sans Condensed', sans-serif;
-  text-decoration: none;
-  color: white;
-  display: inline-block;
-  margin-right: 45px;
-  cursor: pointer;
-  transition: color .03s ease-in;
-  text-shadow: 2px 2px 4px #000;
-}
-
-.nav-bar a:hover,
-.projects-bar span:hover {
-  color: #999;
-}
-
-.home--text_container {
-  position: absolute;
-  top: 20%;
-  left: 7%;
-}
-
-.home--text_container .title {
-  font-family: 'Fira Mono', monospace;
-  text-shadow: 1px 1px 5px #999;
-  color: black;
-  font-size: 55px;
-  font-weight: bold;
-}
-
-.home--text_container .description {
-  font-family: 'Open Sans Condensed', sans-serif;
-  text-shadow: 1px 1px 5px #999;
-  color: black;
-  font-size: 45px;
-}
-
-.home--text_container .career {
-  font-family: 'Open Sans Condensed', sans-serif;
-  text-shadow: 1px 1px 5px #999;
-  color: white;
-  font-size: 25px;
-  position: absolute;
-  top: 565px;
-}
-
-.about--container {
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-  height: 100%;
-}
-
-.about--text_container {
-  font-family: 'Open Sans Condensed', sans-serif;
-  box-sizing: border-box;
-  width: 60%;
-  min-width: 400px;
-  padding: 2% 7%;
-}
-
-.about--text_container .title,
-.modal .title,
-.work-title {
-  font-size: 45px;
-}
-
-.about--text_container .title:after,
-.modal .title:after {
-  display: inline-block;
-  content: "";
-  border-top: 2px solid black;
-  width: 60%;
-  margin: 0 5px;
-  transform: translateY(-16px);
-}
-
-.modal .title:after {
-  border-top-color: white;
-}
-
-.about--text_container .description {
-  padding: 20px;
-  font-size: 30px;
-  text-align: justify;
-}
-
-.about--img_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column nowrap;
-  width: 40%;
-  max-height: 100%;
-}
-
-.about--img_container img {
-  margin: 5px;
-  width: 90%;
-  min-width: 400px;
-  height: auto;
-}
-
-img:first-child {
-  margin-top: 20px;
-}
-
-.work-title {
-  font-family: 'Open Sans Condensed', sans-serif;
-  color: white;
-  position: absolute;
-  top:0;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.modal {
-  font-family: 'Open Sans Condensed', sans-serif;
-  position: relative;
-  bottom:35px;
-  width: 90%;
-  height: 90%;
-  background-color: transparent;
-  z-index: 4;
-  box-sizing: border-box;
-  padding: 3% 7%;
-  color: white;
-}
-
-div.project-container {
-  width: 70%;
-  margin-left: 15%;
-}
-
-div.project-img {
-  width: 85%;
-  min-width: 300px;
-  -webkit-filter: none;
-  filter: none;
-}
-
-img.fit-img {
-  width: 100%;
-  -webkit-filter: none;
-  filter: none;
-}
-
-.contact-links {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.contact-links i {
-  font-size: 40px;
-  color: white;
-  margin-right: 8px;
-}
-
 .contact-links a,
 address {
-  font-family: 'Open Sans Condensed', sans-serif;
   font-style: normal;
   display: flex;
   align-items: center;
-  font-size: 20px;
   color: white;
   text-decoration: none;
   transition: color .25s ease-in;
@@ -314,14 +121,454 @@ address {
 
 .contact-links i {
   color: white;
-  transition: all .25s ease-in-out;
-}
-
-.contact-links a:hover {
-  color: #999;
-  transform: scale(1.1);
+  margin-right: 8px;
 }
 
 .active {
   color: #999 !important;
+}
+
+/*----------------------------------------------------------------------------------------------------------------------------*/
+
+@media screen and (max-width: 768px) {
+
+  .parallax__group {
+    height: 100%
+  }
+
+  #group2 {
+    height: 140vh;
+  }
+
+  #group3 {
+    height: 70vh;
+  }
+
+  #group4 {
+    height: 20vh;
+  }
+
+  /*Groups*/
+  #group1 .parallax__layer--back {
+    background-image: url('./images/home-mobile.JPG');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+  }
+
+  #group3 .parallax__layer--base {
+    background-image: url('./images/59.JPG');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+  }
+
+  /*HTML*/
+  .nav-bar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: fixed;
+    height: 3vh;
+    width: 100%;
+    background-color: rgba(34, 34, 34, 0.8);
+    z-index: 1;
+    color: #ddd;
+    font-size: 2em;
+    padding: 15px;
+  }
+
+  .projects-bar {
+    position: relative;
+    top: 25%;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    padding-left: 10px;
+    z-index: 1;
+    color: #222;
+    background-color: transparent;
+    font-size: 2em;
+    font-weight: bold;
+  }
+
+  .project-trigger {
+    text-shadow: 2px 2px 4px #999;
+    margin: 5px 0;
+  }
+
+  .nav-bar a {
+    display: none;
+  }
+
+  .nav-bar i {
+    display: inline-block;
+    margin-right: 30px;
+  }
+
+  .home--text_container {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+    text-align: center;
+  }
+
+  .home--text_container .title {
+    text-shadow: 1px 1px 5px #999;
+    color: black;
+    font-size: 3.5em;
+    font-weight: bold;
+  }
+
+  .home--text_container .description {
+    text-shadow: 1px 1px 5px #999;
+    color: black;
+    font-size: 1.8em;
+  }
+
+  .about--container {
+  }
+
+  .about--text_container {
+    box-sizing: border-box;
+    width: 90%;
+    margin: 5px auto 20px;
+  }
+
+  .about--text_container .title,
+  .work-title {
+    font-size: 3.6em;
+    text-align: center;
+  }
+
+  .work-title {
+    text-shadow: 3px 3px 5px #222;
+  }
+
+  .about--text_container .description {
+    font-size: 1.3em;
+    text-align: justify;
+  }
+
+  .about--img_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column nowrap;
+    width: 100%;
+    /*height: 100%;*/
+  }
+
+  .about--img_container img {
+    margin: 5px;
+    width: 90%;
+    height: auto;
+  }
+
+  .work-msg {
+    position: absolute;
+    top: 2%;
+    left: 50%;
+    color: white;
+    transform: translateX(-50%);
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .work-msg .work-description {
+    display: none;
+  }
+
+  .modal {
+    position: relative;
+    top:35px;
+    width: 90%;
+    height: 90%;
+    background-color: transparent;
+    z-index: 4;
+    box-sizing: border-box;
+    color: white;
+  }
+
+  .title-line {
+    display: none;
+  }
+
+  div.project-container {
+    width: 100%;
+  }
+
+  .project-description {
+    text-align: justify;
+    margin-bottom: 20px;
+  }
+
+  div.project-img {
+    width: 100%;
+    -webkit-filter: none;
+    filter: none;
+  }
+
+  img.fit-img {
+    width: 100%;
+    -webkit-filter: none;
+    filter: none;
+  }
+
+  .contact-links {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .contact-links i {
+    font-size: 20px;
+  }
+
+  .contact-links a,
+  address {
+    margin: 5px 10px;
+    font-size: 17px;
+  }
+
+  #mail-link {
+    margin-left: 0;
+  }
+
+}
+
+@media screen and (min-width: 992px) {
+  /*Goups*/
+
+  #group1 .parallax__layer--back {
+    background-image: url('./images/foto-home.JPG');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+  }
+
+  #group3 .parallax__layer--base {
+    background-image: url('./images/works.JPG');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+  }
+
+  #group4 {
+    height: 20vh;
+  }
+
+  /*HTML*/
+
+  .nav-bar, .projects-bar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: fixed;
+    height: 3vh;
+    width: 100%;
+    /*background-color: #222;*/
+    background-color: transparent;
+    z-index: 1;
+    color: #ddd;
+    font-size: 2em;
+    padding: 15px;
+    transition: background-color .27s ease-in-out;
+  }
+
+  .projects-bar {
+    position: relative;
+    top: 92%;
+    justify-content: center;
+    background-color: transparent;
+    align-self: flex-end;
+  }
+
+  .nav-bar a,
+  .projects-bar span {
+    text-decoration: none;
+    color: white;
+    display: inline-block;
+    margin-right: 45px;
+    cursor: pointer;
+    transition: color .03s ease-in;
+    text-shadow: 2px 2px 4px #000;
+  }
+
+  .nav-bar a:hover,
+  .projects-bar span:hover {
+    color: #999;
+  }
+
+  .nav-bar i {
+    display: none
+  }
+
+  .home--text_container {
+    position: absolute;
+    top: 20%;
+    left: 7%;
+  }
+
+  .home--text_container .title {
+    text-shadow: 1px 1px 5px #999;
+    color: black;
+    font-size: 55px;
+    font-weight: bold;
+  }
+
+  .home--text_container .description {
+    text-shadow: 1px 1px 5px #999;
+    color: black;
+    font-size: 45px;
+  }
+
+  /*.home--text_container .career {
+    text-shadow: 1px 1px 5px #999;
+    color: white;
+    font-size: 25px;
+    position: absolute;
+    top: 565px;
+  }*/
+
+  .about--container {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+    height: 100%;
+  }
+
+  .about--text_container {
+    box-sizing: border-box;
+    width: 60%;
+    padding: 3% 2% 2% 7%;
+  }
+
+  .modal .title {
+    font-size: 45px;
+  }
+  .about--text_container .title,
+  .work-title {
+    font-size: 65px;
+  }
+
+  .about--text_container .title:after,
+  .modal .title:after {
+    display: inline-block;
+    content: "";
+    border-top: 2px solid black;
+    width: 60%;
+    margin: 0 13px;
+    transform: translateY(-23px);
+  }
+
+  .modal .title:after {
+    border-top-color: white;
+  }
+
+  .about--text_container .description {
+    padding: 20px;
+    font-size: 30px;
+    text-align: justify;
+  }
+
+  .about--img_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column nowrap;
+    width: 40%;
+    height: 100%;
+  }
+
+  .about--img_container img {
+    margin: 5px;
+    height: 30%;
+    width: auto;
+  }
+
+  img:first-child {
+    margin-top: 20px;
+  }
+
+  .work-msg {
+    position: absolute;
+    top: 6%;
+    left: 50%;
+    color: white;
+    transform: translateX(-50%);
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .work-msg .work-description {
+    font-size: 25px;
+    text-shadow: 1px 1px 2px #222;
+  }
+
+  .modal {
+    position: relative;
+    bottom:35px;
+    width: 90%;
+    height: 90%;
+    background-color: transparent;
+    z-index: 4;
+    box-sizing: border-box;
+    padding: 3% 7%;
+    color: white;
+  }
+
+  div.project-container {
+    width: 70%;
+    margin-left: 15%;
+  }
+
+  div.project-img {
+    width: 85%;
+    min-width: 300px;
+    -webkit-filter: none;
+    filter: none;
+  }
+
+  img.fit-img {
+    width: 100%;
+    -webkit-filter: none;
+    filter: none;
+  }
+
+  .contact-links {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .contact-links i {
+    font-size: 40px;
+  }
+
+  .contact-links a,
+  address {
+    font-size: 20px;
+  }
+
+  .contact-links i {
+    transition: all .25s ease-in-out;
+  }
+
+  .contact-links a:hover {
+    color: #999;
+    transform: scale(1.1);
+  }
+
 }
