--- a/portafolio.css
+++ b/portafolio.css
@@ -130,7 +130,7 @@ address {
 
 /*----------------------------------------------------------------------------------------------------------------------------*/
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
 
   .parallax__group {
     height: 100%
@@ -159,7 +159,8 @@ address {
   }
 
   #group2 .parallax__layer--base {
-    padding: 30px 0 0 10px;
+    /*padding: 30px 0 0 10px;*/
+    height: 100%;
   }
 
   #group3 .parallax__layer--base {
@@ -174,6 +175,7 @@ address {
   .nav-bar {
     display: flex;
     flex-flow: column nowrap;
+    justify-content: space-around;
     align-items: flex-start;
     position: fixed;
     height: 3vh;
@@ -181,7 +183,7 @@ address {
     background-color: rgba(34, 34, 34, 0.8);
     z-index: 1;
     color: #ddd;
-    font-size: 2em;
+    font-size: 5vh;
     padding: 15px;
     transition: height .37s ease-in-out;
   }
@@ -197,6 +199,10 @@ address {
   }
 
   .projects-bar {
+    box-sizing: border-box;
+    width: 100%;
+    height: 80%;
+    overflow: auto;
     position: relative;
     top: 30%;
     display: flex;
@@ -206,7 +212,7 @@ address {
     z-index: 1;
     color: #222;
     background-color: transparent;
-    font-size: 2em;
+    font-size: 5vh;
     font-weight: bold;
     transition: top .37s ease-in-out;
   }
@@ -277,28 +283,27 @@ address {
   .home--text_container .title {
     text-shadow: 1px 1px 5px #999;
     color: black;
-    font-size: 3.5em;
+    font-size: 8vh;
     font-weight: bold;
   }
 
   .home--text_container .description {
     text-shadow: 1px 1px 5px #999;
     color: black;
-    font-size: 1.8em;
-  }
-
-  .about--container {
+    font-size: 4.4vh;
   }
 
   .about--text_container {
     box-sizing: border-box;
-    width: 90%;
-    margin: 5px auto 20px;
+    width: 100%;
+    /*height: 50%;*/
+    padding: 15px 20px;
+    overflow: auto;
   }
 
   .about--text_container .title,
   .work-title {
-    font-size: 3.6em;
+    font-size: 8vh;
     text-align: center;
   }
 
@@ -307,23 +312,25 @@ address {
   }
 
   .about--text_container .description {
-    font-size: 1.3em;
+    font-size: 3.1vh;
     text-align: justify;
   }
 
   .about--img_container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-flow: column nowrap;
+    box-sizing: border-box;
     width: 100%;
-    /*height: 100%;*/
+    /*height: 50%;*/
+    padding: 10px 5px;
+    /*overflow: auto;*/
   }
 
   .about--img_container img {
-    margin: 5px;
-    width: 90%;
-    height: auto;
+    height: 32%;
+    width: auto;
   }
 
   .work-msg {
@@ -344,9 +351,10 @@ address {
 
   .modal {
     position: relative;
-    top:35px;
+    top: 35px;
     width: 90%;
-    height: 60%;
+    height: 55%;
+    padding-bottom: 20px;
     background-color: transparent;
     z-index: 4;
     box-sizing: border-box;
@@ -358,7 +366,9 @@ address {
   }
 
   div.project-container {
+    height: 100%;
     width: 100%;
+    overflow: auto;
   }
 
   .project-description {
@@ -388,13 +398,13 @@ address {
   }
 
   .contact-links i {
-    font-size: 20px;
+    font-size: 3vh;
   }
 
   .contact-links a,
   address {
     margin: 5px 10px;
-    font-size: 17px;
+    font-size: 2.8vh;
   }
 
   #mail-link {
@@ -402,7 +412,7 @@ address {
   }
 
 }
-
+/*--------------------------------------------------------------------------------------------------------------------*/
 @media screen and (min-width: 992px) {
   /*Goups*/
 
@@ -545,17 +555,17 @@ address {
 
   .about--img_container {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: center;
+    overflow: auto;
     width: 40%;
     height: 100%;
   }
 
   .about--img_container img {
-    margin: 5px;
-    height: 30%;
-    width: auto;
+    width: 90%;
+    height: auto;
   }
 
   img:first-child {
