--- a/portafolio.css
+++ b/portafolio.css
@@ -130,14 +130,14 @@ address {
 
 /*----------------------------------------------------------------------------------------------------------------------------*/
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 768px) {
 
   .parallax__group {
     height: 100%
   }
 
   #group2 {
-    height: 140vh;
+    height: 200vh;
   }
 
   #group3 {
@@ -413,7 +413,7 @@ address {
 
 }
 /*--------------------------------------------------------------------------------------------------------------------*/
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 768px) {
   /*Goups*/
 
   #group1 .parallax__layer--back {
@@ -523,14 +523,22 @@ address {
     box-sizing: border-box;
     width: 60%;
     padding: 3% 2% 2% 7%;
+    /*overflow: auto;*/
   }
 
-  .modal .title {
+  .modal .title-line {
+    height: 10%;
+    overflow: hidden;
     font-size: 45px;
   }
   .about--text_container .title,
   .work-title {
     font-size: 65px;
+  }
+
+  .about--text_container .title {
+    height: 15%;
+    overflow: hidden;
   }
 
   .about--text_container .title:after,
@@ -545,18 +553,22 @@ address {
 
   .modal .title:after {
     border-top-color: white;
+      transform: translateY(-16px);
   }
 
   .about--text_container .description {
+    box-sizing: border-box;
+    height: 85%;
     padding: 20px;
-    font-size: 30px;
+    font-size: 27px;
     text-align: justify;
+    overflow: auto;
   }
 
   .about--img_container {
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     overflow: auto;
     width: 40%;
@@ -586,34 +598,37 @@ address {
   .work-msg .work-description {
     font-size: 25px;
     text-shadow: 1px 1px 2px #222;
+    text-align: center;
   }
 
   .modal {
-    position: relative;
-    bottom:35px;
-    width: 90%;
+    position: absolute;
+    top: 0;
+    width: 100%;
     height: 90%;
     background-color: transparent;
     z-index: 4;
     box-sizing: border-box;
-    padding: 3% 7%;
+    padding: 3% 7% 2%;
     color: white;
   }
 
   div.project-container {
     width: 70%;
-    margin-left: 15%;
+    height: 90%;
+    overflow: auto;
   }
 
   div.project-img {
-    width: 85%;
+    width: 100%;
+    text-align: center;
     min-width: 300px;
     -webkit-filter: none;
     filter: none;
   }
 
   img.fit-img {
-    width: 100%;
+    width: 80%;
     -webkit-filter: none;
     filter: none;
   }
