Fix links with section names

--- a/portafolio.css
+++ b/portafolio.css
@@ -40,19 +40,19 @@
 
 /*Groups*/
 
-#group1 {
+#home {
   z-index: 0;
 }
 
-#group2, #group3, #group4 {
+#about, #work, #contact {
   z-index: 2;
 }
 
-#group2 .parallax__layer {
+#about .parallax__layer {
   background-color: #fff;
 }
 
-#group3 .overlay {
+#work .overlay {
   content: '\A';
   position: absolute;
   width: 100%; height:100%;
@@ -63,16 +63,16 @@
   -webkit-transition: all 1s;
 }
 
-#group3 .overlay:hover {
+#work .overlay:hover {
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
 }
 
-#group3 .overlay:hover {
+#work .overlay:hover {
   opacity: 1;
 }
 
-#group4 .parallax__layer {
+#contact .parallax__layer {
   background-color: #222;
 }
 
@@ -136,21 +136,21 @@ address {
     height: 100%
   }
 
-  #group2 {
+  #about {
     height: 200vh;
   }
 
-  #group3 {
+  #work {
     height: 80vh;
     transition: height .37s ease-in-out;
   }
 
-  #group4 {
+  #contact {
     height: 20vh;
   }
 
   /*Groups*/
-  #group1 .parallax__layer--back {
+  #home .parallax__layer--back {
     background-image: url('./images/home-mobile.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -158,12 +158,12 @@ address {
     background-position: center;
   }
 
-  #group2 .parallax__layer--base {
+  #about .parallax__layer--base {
     /*padding: 30px 0 0 10px;*/
     height: 100%;
   }
 
-  #group3 .parallax__layer--base {
+  #work .parallax__layer--base {
     background-image: url('./images/works2.jpg');
     background-size: cover;
     background-position: center;
@@ -411,7 +411,7 @@ address {
 @media screen and (min-width: 768px) {
   /*Goups*/
 
-  #group1 .parallax__layer--back {
+  #home .parallax__layer--back {
     background-image: url('./images/foto-home.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -419,14 +419,14 @@ address {
     background-position: center;
   }
 
-  #group3 .parallax__layer--base {
+  #work .parallax__layer--base {
     background-image: url('./images/works.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
   }
 
-  #group4 {
+  #contact {
     height: 20vh;
   }
 
